rest-api/src/main/java/com/example/restapi/global/error/exception/ConflictDataException.java
package com.example.restapi.global.error.exception;

public class ConflictDataException extends RuntimeException {
    public ConflictDataException() {
        super();
    }
    public ConflictDataException(String message) {
        super(message);
    }
}
